# ict-management-stystem

./: .env  Cargo.toml  README.md  diesel.toml
migrations/2025-07-01-014152_create_users/: up.sql
src/: main.rs  models.rs  schema.rs
