[package]
name = "ict-management-system"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
bcrypt = "0.15"
diesel = { version = "2.1", features = ["postgres", "r2d2", "chrono", "uuid"] }
actix-rt = "2"
